// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component ContributorRowHeader header for contributor editor control with all options 1`] = `
<Fragment>
  <ConfirmDialogBox
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete all records?",
        "confirmationTitle": "Delete all",
      }
    }
    onAction={[MockFunction]}
    onRef={[Function]}
  />
  <br />
  Step 2 - Select your name from the list below
  <WithStyles(ListItem)
    classes={
      Object {
        "root": "header",
      }
    }
  >
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(ListItemIcon)>
        <pure(PeopleIcon) />
      </WithStyles(ListItemIcon)>
    </Hidden>
    <WithStyles(ListItemText)
      secondary="Name as published"
      secondaryTypographyProps={
        Object {
          "variant": "caption",
        }
      }
    />
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(ListItemText)
        secondary="Affiliation %"
        secondaryTypographyProps={
          Object {
            "variant": "caption",
          }
        }
      />
      <WithStyles(ListItemText)
        secondary="UQ identifier"
        secondaryTypographyProps={
          Object {
            "variant": "caption",
          }
        }
      />
    </Hidden>
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(ListItemText)
        classes={
          Object {
            "secondary": "right paddingRight24",
          }
        }
        secondary="Reorder records"
        secondaryTypographyProps={
          Object {
            "variant": "caption",
          }
        }
      />
    </Hidden>
    <WithStyles(ListItemSecondaryAction)
      classes={
        Object {
          "root": "",
        }
      }
    >
      <WithStyles(Tooltip)
        disableFocusListener={false}
        disableHoverListener={false}
        disableTouchListener={false}
        title="Remove all records"
      >
        <span>
          <WithStyles(IconButton)
            aria-label="Remove all records"
            disabled={false}
            onClick={[Function]}
          >
            <pure(DeleteForeverIcon)
              titleAccess="Remove all records"
            />
          </WithStyles(IconButton)>
        </span>
      </WithStyles(Tooltip)>
    </WithStyles(ListItemSecondaryAction)>
  </WithStyles(ListItem)>
</Fragment>
`;

exports[`Component ContributorRowHeader header for contributor editor control with delete all disabled 1`] = `
<Fragment>
  <ConfirmDialogBox
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete all records?",
        "confirmationTitle": "Delete all",
      }
    }
    onAction={[MockFunction]}
    onRef={[Function]}
  />
  <WithStyles(ListItem)
    classes={
      Object {
        "root": "header",
      }
    }
  >
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(ListItemIcon)>
        <pure(PeopleIcon) />
      </WithStyles(ListItemIcon)>
    </Hidden>
    <WithStyles(ListItemText)
      secondary="Name as published"
      secondaryTypographyProps={
        Object {
          "variant": "caption",
        }
      }
    />
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(ListItemText)
        classes={
          Object {
            "secondary": "right paddingRight24",
          }
        }
        secondary="Reorder records"
        secondaryTypographyProps={
          Object {
            "variant": "caption",
          }
        }
      />
    </Hidden>
    <WithStyles(ListItemSecondaryAction)
      classes={
        Object {
          "root": "",
        }
      }
    >
      <WithStyles(Tooltip)
        disableFocusListener={true}
        disableHoverListener={true}
        disableTouchListener={true}
        title="Remove all records"
      >
        <span>
          <WithStyles(IconButton)
            aria-label="Remove all records"
            disabled={true}
            onClick={[Function]}
          >
            <pure(DeleteForeverIcon)
              titleAccess="Remove all records"
            />
          </WithStyles(IconButton)>
        </span>
      </WithStyles(Tooltip)>
    </WithStyles(ListItemSecondaryAction)>
  </WithStyles(ListItem)>
</Fragment>
`;

exports[`Component ContributorRowHeader header for contributor editor control with name and delete all button only 1`] = `
<Fragment>
  <ConfirmDialogBox
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete all records?",
        "confirmationTitle": "Delete all",
      }
    }
    onAction={[MockFunction]}
    onRef={[Function]}
  />
  <WithStyles(ListItem)
    classes={
      Object {
        "root": "header",
      }
    }
  >
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(ListItemIcon)>
        <pure(PeopleIcon) />
      </WithStyles(ListItemIcon)>
    </Hidden>
    <WithStyles(ListItemText)
      secondary="Name as published"
      secondaryTypographyProps={
        Object {
          "variant": "caption",
        }
      }
    />
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(ListItemText)
        classes={
          Object {
            "secondary": "right paddingRight24",
          }
        }
        secondary="Reorder records"
        secondaryTypographyProps={
          Object {
            "variant": "caption",
          }
        }
      />
    </Hidden>
    <WithStyles(ListItemSecondaryAction)
      classes={
        Object {
          "root": "",
        }
      }
    >
      <WithStyles(Tooltip)
        disableFocusListener={false}
        disableHoverListener={false}
        disableTouchListener={false}
        title="Remove all records"
      >
        <span>
          <WithStyles(IconButton)
            aria-label="Remove all records"
            disabled={false}
            onClick={[Function]}
          >
            <pure(DeleteForeverIcon)
              titleAccess="Remove all records"
            />
          </WithStyles(IconButton)>
        </span>
      </WithStyles(Tooltip)>
    </WithStyles(ListItemSecondaryAction)>
  </WithStyles(ListItem)>
</Fragment>
`;

exports[`Component ContributorRowHeader header for creator role 1`] = `
<Fragment>
  <ConfirmDialogBox
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete all records?",
        "confirmationTitle": "Delete all",
      }
    }
    onAction={[MockFunction]}
    onRef={[Function]}
  />
  <WithStyles(ListItem)
    classes={
      Object {
        "root": "header",
      }
    }
  >
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(ListItemIcon)>
        <pure(PeopleIcon) />
      </WithStyles(ListItemIcon)>
    </Hidden>
    <WithStyles(ListItemText)
      secondary="Name as published"
      secondaryTypographyProps={
        Object {
          "variant": "caption",
        }
      }
    />
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(ListItemText)
        secondary="Role"
        secondaryTypographyProps={
          Object {
            "variant": "caption",
          }
        }
      />
    </Hidden>
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(ListItemText)
        classes={
          Object {
            "secondary": "right paddingRight24",
          }
        }
        secondary="Reorder records"
        secondaryTypographyProps={
          Object {
            "variant": "caption",
          }
        }
      />
    </Hidden>
    <WithStyles(ListItemSecondaryAction)
      classes={
        Object {
          "root": "",
        }
      }
    >
      <WithStyles(Tooltip)
        disableFocusListener={false}
        disableHoverListener={false}
        disableTouchListener={false}
        title="Remove all records"
      >
        <span>
          <WithStyles(IconButton)
            aria-label="Remove all records"
            disabled={false}
            onClick={[Function]}
          >
            <pure(DeleteForeverIcon)
              titleAccess="Remove all records"
            />
          </WithStyles(IconButton)>
        </span>
      </WithStyles(Tooltip)>
    </WithStyles(ListItemSecondaryAction)>
  </WithStyles(ListItem)>
</Fragment>
`;

exports[`Component ContributorRowHeader should display infinite class 1`] = `
<Fragment>
  <ConfirmDialogBox
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete all records?",
        "confirmationTitle": "Delete all",
      }
    }
    onAction={[MockFunction]}
    onRef={[Function]}
  />
  <WithStyles(ListItem)
    classes={
      Object {
        "root": undefined,
      }
    }
  >
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(ListItemIcon)>
        <pure(PeopleIcon) />
      </WithStyles(ListItemIcon)>
    </Hidden>
    <WithStyles(ListItemText)
      secondary="Name as published"
      secondaryTypographyProps={
        Object {
          "variant": "caption",
        }
      }
    />
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(ListItemText)
        classes={
          Object {
            "secondary": "undefined test-class-1",
          }
        }
        secondary="Reorder records"
        secondaryTypographyProps={
          Object {
            "variant": "caption",
          }
        }
      />
    </Hidden>
    <WithStyles(ListItemSecondaryAction)
      classes={
        Object {
          "root": "test-class-2",
        }
      }
    >
      <WithStyles(Tooltip)
        disableFocusListener={false}
        disableHoverListener={false}
        disableTouchListener={false}
        title="Remove all records"
      >
        <span>
          <WithStyles(IconButton)
            aria-label="Remove all records"
            disabled={false}
            onClick={[Function]}
          >
            <pure(DeleteForeverIcon)
              titleAccess="Remove all records"
            />
          </WithStyles(IconButton)>
        </span>
      </WithStyles(Tooltip)>
    </WithStyles(ListItemSecondaryAction)>
  </WithStyles(ListItem)>
</Fragment>
`;

exports[`Component ContributorRowHeader should have a proper style generator 1`] = `
Object {
  "header": Object {
    "borderBottom": "1px solid rgba(0, 0, 0, 0.2)",
    "marginTop": 8,
  },
  "paddingRight14": Object {
    "paddingRight": 14,
  },
  "paddingRight24": Object {
    "paddingRight": 24,
  },
  "paddingRight36": Object {
    "paddingRight": 36,
  },
  "right": Object {
    "textAlign": "right",
  },
}
`;
